# CiFEr

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  abe_2doc_8h_source.html  annotated.html  big_8h.html  big_8h_source.html  classes.html  common_8h.html  common_8h_source.html  damgard_8h.html  damgard_8h_source.html  damgard__dec__multi_8h.html  damgard__dec__multi_8h_source.html  damgard__multi_8h.html  damgard__multi_8h_source.html  data_2doc_8h_source.html  data_8pb-c_8h_source.html  data__ser_8h_source.html  ddh_8h.html  ddh_8h_source.html  ddh__multi_8h.html  ddh__multi_8h_source.html  dippe_8h.html  dippe_8h_source.html  dir_081fa7d909daaa69e7daecfa20c98ce8.html  dir_0cd43d440ba68ad5fc6a57e2fd6a6459.html  dir_0d628d3c9b21a09631269a5f84e03143.html  dir_111a6136319d4927e229b26a70c88ef8.html  dir_1a06e1bfecdc4221491a8ef779386285.html  dir_1a1ac732341b36bac5143090667c918e.html  dir_27bd16cc6d285f38e7cf5a15a18694b8.html  dir_3186075824eb6c6fc16d275650bc36ef.html  dir_3a2c446f3cb4d9e866b08fb198af4352.html  dir_4fe3343888500d7c3ac81b0106aea510.html  (+204 more)
.circleci/: config.yml
example/: example.c  example.out
include/: test.h
include/abe/: doc.h  fame.h  gpsw.h  policy.h
include/cifer/: test.h
include/cifer/abe/: dippe.h  fame.h  gpsw.h  policy.h
include/cifer/data/: mat.h  mat_curve.h  vec.h  vec_curve.h  vec_float.h
include/cifer/innerprod/: doc.h
include/cifer/innerprod/fullysec/: damgard.h  damgard_dec_multi.c  damgard_dec_multi.h  damgard_multi.h  dmcfe.h  fh_multi_ipe.h  fhipe.h  lwe_fs.h  paillier.h
include/cifer/innerprod/simple/: ddh.h  ddh_multi.h  lwe.h  ring_lwe.h
include/cifer/internal/: big.h  common.h  dlog.h  errors.h  hash.h  keygen.h  prime.h  str.h
include/cifer/quadratic/: sgp.h
include/cifer/sample/: normal.h  normal_cdt.h  normal_cumulative.h  normal_double.h  normal_double_constant.h  normal_negative.h  uniform.h
include/cifer/serialization/: data.pb-c.c  data.pb-c.h  data.proto  data_ser.c  data_ser.h  fame.pb-c.c  fame.pb-c.h  fame.proto  fame_ser.c  fame_ser.h  gpsw.pb-c.c  gpsw.pb-c.h  gpsw.proto  gpsw_ser.h
include/data/: doc.h  mat.h  vec.h  vec_curve.h  vec_float.h
include/innerprod/: doc.h
include/innerprod/fullysec/: damgard.h  damgard_multi.h  doc.h  lwe_fs.h  paillier.h
include/innerprod/simple/: ddh.h  ddh_multi.h  doc.h  lwe.h  ring_lwe.h
include/internal/: big.h  common.h  dlog.h  doc.h  errors.h  keygen.h  prime.h
include/sample/: doc.h  normal.h  normal_cumulative.h  normal_double.h  normal_negative.h  uniform.h
src/abe/: dippe.c  fame.c  gpsw.c  policy.c
src/data/: mat.c  mat_curve.c  vec.c  vec_curve.c  vec_float.c
src/innerprod/fullysec/: damgard.c  damgard_dec_multi.c  damgard_multi.c  dmcfe.c  fh_multi_ipe.c  fhipe.c  lwe_fs.c  paillier.c
src/innerprod/simple/: ddh.c  ddh_multi.c  lwe.c  ring_lwe.c
src/internal/: big.c  common.c  dlog.c  hash.c  keygen.c  prime.c  str.c
src/quadratic/: sgp.c
src/sample/: normal.c  normal_cdt.c  normal_cumulative.c  normal_double.c  normal_double_constant.c  normal_negative.c  uniform.c
src/serialization/: data_ser.c  fame_ser.c  gpsw_ser.c
test/: test.c
test/abe/: dippe.c  fame.c  gpsw.c  policy.c
test/data/: mat.c  vec.c
test/innerprod/fullysec/: damgard.c  damgard_dec_multi.c  damgard_multi.c  dmcfe.c  fh_multi_ipe.c  fhipe.c  lwe_fs.c  paillier.c
test/innerprod/simple/: ddh.c  ddh_multi.c  lwe.c  ring_lwe.c
test/internal/: big.c  dlog.c  keygen.c  prime.c  str.c
test/quadratic/: sgp.c
test/sample/: normal.c  normal_cdt.c  normal_cumulative.c  normal_double.c  normal_double_constant.c  normal_negative.c  uniform.c
test/serialization/: data_ser.c  fame_ser.c  gpsw_ser.c
